fix social and coupon section z-indexing over side menu

--- a/src/components/social-section/SocialSection.module.css
+++ b/src/components/social-section/SocialSection.module.css
@@ -39,6 +39,7 @@
 /*icons sub div*/
 .socialSec__iconsDiv__subDiv {
   position: relative;
+  z-index: -1;
 }
 
 /*icons sub div p */
